@@ -16,6 +16,9 @@ bannedChar: '&4A character you tried to use is banned"'
 version: 7
 
 cooldown.wait: '&4You need to wait another %s seconds before running that!'
+
+cost.tooPoor: '&4You are too poor to run that command'
+cost.run: '&4&l-%s'
 # for placeholders
 # This is the placeholder for when the user has no team
 placeholder.noTeam: ''
